# guardian-bot

./: .gitignore  Cargo.toml  README.md  flake.nix  justfile
crates/masquerade-sdk/: Cargo.toml  README.md  config.yaml.example  registration.yaml.example
crates/masquerade-sdk/src/: appservice.rs  lib.rs
crates/masquerade-sdk/src/appservice/: builder.rs  device.rs  encryption.rs  error.rs  event_handler.rs  handler.rs  http_client.rs  room.rs  transaction.rs  types.rs  user.rs
