[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
description = "Guardian Bot"
edition = "2024"
homepage = "https://github.com/frankhinek/guardian-bot"
keywords = ["matrix", "bot"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/frankhinek/guardian-bot.git"
rust-version = "1.85.1"
version = "0.1.0"
