[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
description = "Guardian Bot"
edition = "2024"
homepage = "https://github.com/frankhinek/guardian-bot"
keywords = ["matrix", "bot"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/frankhinek/guardian-bot.git"
rust-version = "1.85.1"
version = "0.1.0"

[workspace.dependencies]
matrix-sdk = { version = "0.13.0", default-features = false }
matrix-sdk-sqlite = { version = "0.13.0", default-features = false }
reqwest = { version = "0.12", default-features = false }
