[package]
edition.workspace = true
license-file.workspace = true
name = "masquerade-sdk"
publish = false
rust-version.workspace = true
version.workspace = true

[dependencies]
async-stream = "0.3.6"
axum = { version = "0.8.4" }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
bytes = "1.10.1"
futures = "0.3.31"
http = "1.3.1"
matrix-sdk = { workspace = true, default-features = false, features = [
  "e2e-encryption",
  "markdown",
  "rustls-tls",
  "sqlite",
] }
matrix-sdk-sqlite = { workspace = true, default-features = false }
regex = "1.11.2"
reqwest = { workspace = true, default-features = false, features = [
  "json",
  "rustls-tls-native-roots",
] }
serde = "1.0.219"
serde_json = "1.0.140"
serde_yaml = "0.9.34"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
tokio-util = "0.7.15"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.4"
uuid = { version = "1.17.0", features = ["v5"] }
